Enhance justfile for Windows compatibility and add cache clearing commands
- Set shell to use bash for Windows compatibility.
- Introduced `dev-ps` command for running the development server in PowerShell.
- Added `clear-deno-cache` and `clear-netlify-cache` commands to clear respective caches, addressing common issues on Windows.
- Updated netlify.toml with notes on Python Netlify Functions and cache clearing instructions.
- Removed outdated README_OLD.md file to streamline documentation.

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,10 @@
   publish = "public"
   functions = "netlify/functions"
 
+# Note: This project uses Python Netlify Functions, not Edge Functions
+# If you encounter Deno/Edge Functions errors, clear the cache with: just clear-deno-cache
+# Python runtime is specified in netlify/functions/runtime.txt
+
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
