Refactor database handling to use PostgreSQL with psycopg2, update environment configuration for Neon Database, and remove Supabase schema. Enhance recipe API functions to utilize new database methods for querying, inserting, updating, and deleting recipes.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# Supabase Configuration
-SUPABASE_URL=your-project-url.supabase.co
-SUPABASE_KEY=your-anon-key
-SUPABASE_SERVICE_KEY=your-service-role-key
+# Neon Database Configuration (via Netlify DB)
+# This is automatically provided by Netlify when you create a Netlify DB
+# Format: postgresql://[user]:[password]@[neon_hostname]/[dbname]?sslmode=require
+DATABASE_URL=postgresql://user:password@ep-example.us-east-2.aws.neon.tech/neondb
 
 # Optional: Enable authentication
 ENABLE_AUTH=false
