Add dev configuration to netlify.toml to disable Edge Functions
- Introduced a [dev] section in netlify.toml to disable Edge Functions, ensuring compatibility with Python Netlify Functions.
- Added comments to clarify the purpose of the configuration and provide troubleshooting guidance for Deno/Edge Functions errors.

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,11 @@
   publish = "public"
   functions = "netlify/functions"
 
+[dev]
+  # Disable Edge Functions - this project only uses Python Netlify Functions
+  # This prevents Netlify CLI from trying to set up Deno
+  edge_functions = []
+
 # Note: This project uses Python Netlify Functions, not Edge Functions
 # If you encounter Deno/Edge Functions errors, clear the cache with: just clear-deno-cache
 # Python runtime is specified in netlify/functions/runtime.txt
