Update netlify.toml to define functions directory for serverless deployment
- Added a [functions] section to specify the directory for serverless functions.
- Included comments to clarify the purpose of the configuration for better understanding.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,11 @@
 [build]
   command = "echo 'No build command needed'"
   publish = "public"
-  functions = "netlify/functions"
+
+[functions]
+  # Directory with serverless functions to deploy
+  # This is an absolute path relative to the base directory
+  directory = "netlify/functions"
 
 [dev]
   # Disable Edge Functions - this project only uses Python Netlify Functions
