Remove legacy Flask application files and update .gitignore for cleaner project structure
- Deleted Flask application files (app.py, ajout_recettes.py, init_db.py, maj_recette.py, reset_bd.py) to transition to a serverless architecture.
- Updated .gitignore to exclude unnecessary files and directories, including legacy Flask components and local test files.
- This change streamlines the project for a modern serverless deployment on Netlify.

--- a/.gitignore
+++ b/.gitignore
@@ -30,12 +30,8 @@ wheels/
 *.egg
 
 # Netlify
+.netlify/
 .netlify.toml.bak
-
-# Flask (legacy)
-instance/
-.webassets-cache
-flask_session/
 
 # Database files
 *.db
@@ -43,7 +39,6 @@ flask_session/
 *.sqlite3
 *.db-shm
 *.db-wal
-recipes.db
 
 # Logs
 *.log
@@ -83,9 +78,5 @@ tmp/
 temp/
 .cache/
 
-# Local test files
-test-local/
-local-tests/
-
-# Local Netlify folder
-.netlify
+# Node modules (if any)
+node_modules/
