--- a/netlify.toml
+++ b/netlify.toml
@@ -13,8 +13,8 @@
   edge_functions = []
 
 # Note: This project uses Python Netlify Functions, not Edge Functions
-# If you encounter Deno/Edge Functions errors, clear the cache with: just clear-deno-cache
-# Python runtime is specified in netlify/functions/runtime.txt
+# Each function has its own runtime.txt and requirements.txt in its folder
+# Functions are structured as: netlify/functions/{function-name}/handler.py
 
 [[redirects]]
   from = "/api/*"
