Update netlify.toml to specify functions directory for serverless deployment
- Added the functions directory configuration to netlify.toml to enhance serverless function deployment.
- This change improves the clarity and organization of the deployment settings.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   command = "echo 'No build command needed'"
   publish = "public"
+  functions = "netlify/functions"
 
 [functions]
   # Directory with serverless functions to deploy
