Remove deprecated recipe and shopping list functions along with their associated files
- Deleted handler.py, requirements.txt, and runtime.txt for recipe-detail, recipes, and shopping-list functions to streamline the codebase.
- Updated netlify.toml to reflect the new structure of serverless functions as flat files.
- This change enhances project organization and prepares for a more efficient serverless deployment.

--- a/netlify.toml
+++ b/netlify.toml
@@ -14,8 +14,8 @@
   edge_functions = []
 
 # Note: This project uses Python Netlify Functions, not Edge Functions
-# Each function has its own runtime.txt and requirements.txt in its folder
-# Functions are structured as: netlify/functions/{function-name}/handler.py
+# Functions are structured as flat files: netlify/functions/{function-name}.py
+# All functions share runtime.txt and requirements.txt in netlify/functions/
 
 [[redirects]]
   from = "/api/*"
